# caura-memclaw

./: .env.example  .gitignore  .release-please-manifest.json  AGENT-INSTALL.md  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.yml  install4agent.md  package-lock.json  package.json  release-please-config.json  requirements.txt
.github/: dependabot.yml  labels.yml
cli/: memclaw_init.py
clients/python/: README.md  pyproject.toml
clients/python/src/memclaw_client/: __init__.py  client.py  exceptions.py  models.py
clients/python/tests/: test_client.py
common/: constants.py  http_retry.py  organization_settings_merge.py  provider_names.py  structlog_config.py
core-api/: Dockerfile  pyproject.toml
core-operations/: Dockerfile  pyproject.toml  pytest.ini
core-storage-api/: Dockerfile  pyproject.toml
core-worker/: Dockerfile  pyproject.toml
docs/: MEMCLAW_CLIENT_GUIDE.md  TOOL_TEST_REPORT.md  api-surfaces.md  integration-without-plugin.md  loop-engineering-upgrades.md  mcp-skill-delivery.md  operator-forge-cron.md  performance.md  plugin-upgrade.md
plugin/: CHANGELOG.md  openclaw.plugin.json  package-lock.json  package.json  tools.json
scripts/: _f3_wet_test_observer.py  ensure-default-agent-id.sh  f3_wet_test_matrix.sh  mcp_tool_smoke.py  repro_contradictions_collision.py  repro_contradictions_not_detected.py  repro_contradictions_proper_noun.py  wet-test-install.sh  wet_test_contradiction_prompt.py
tests/: _contradiction_batch_compat.py  _mcp_test_helpers.py  conftest.py  test_a10_evolve_rule_skipped_reason.py  test_a15_evolve_weight_adjustment_skipped_reason.py  test_a1_17_subject_entity_preflight.py  test_a27_shared_tokenizer.py  test_a4_11_overlap_includes_conflicted_supersedes.py  test_a4_status_retraction.py  test_a5a_seed_and_canonical.py  test_a5b_prompt_and_schema.py  test_a5c_tenant_config_plumbing.py  test_a7_classifier_recall.py  test_agent_admin_authz.py  test_api_contradictions.py  test_api_crystallizer.py  (+121 more)
(+234 files in other folders)
