[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "memclaw-client"
version = "0.1.0"
description = "Official Python client for MemClaw — governed shared memory for AI agent fleets (multi-agent, multi-tenant, MCP-native)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Caura", email = "hello@caura.ai" }]
keywords = [
    "memclaw",
    "agent-memory",
    "ai-agents",
    "llm-memory",
    "rag",
    "mcp",
    "knowledge-graph",
    "vector-search",
    "multi-agent",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.urls]
Homepage = "https://memclaw.net"
Documentation = "https://memclaw.net/docs"
Repository = "https://github.com/caura-ai/caura-memclaw"
Issues = "https://github.com/caura-ai/caura-memclaw/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
memclaw_client = ["py.typed"]

[tool.ruff]
target-version = "py39"
line-length = 110
src = ["src", "tests"]

[tool.pytest.ini_options]
# Self-contained config so the client suite doesn't inherit the repo-root
# pytest.ini (which configures pytest-asyncio for the backend services).
testpaths = ["tests"]
